# python_course

./: README.md  mypy.ini
db_homework/: alembic.ini  app.py  cleartables.py  docker-compose.yml  fetchtools.py  models.py  setup.py
lesson-3/: task.py
lesson_django/: .gitignore  Dockerfile  Readme.md  docker-compose.yml  requirements.txt
lesson_flask/: Dockerfile  app.py  pyproject.toml
lesson_flask/app/: app.py
lesson_flask/app/static/css/: styles.css
lesson_flask/app/templates/: base.html  index.html
lesson_flask/app/templates/partials/: navbar.html
lesson_flask/app/views/auth/: auth.py
lesson_flask/static/css/: styles.css
lesson_flask/static/js/: index.js
lesson_flask/templates/: base.html  index.html
lesson_flask_docker/: Dockerfile  Readme.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
lesson_flask_docker/app/: app.py  config.py
lesson_flask_docker/app/migrations/versions/: 4c52f68d6eb7_init.py  5e2d1921f88e_change_a_little_password_model.py
lesson_flask_docker/app/models/: __init__.py  password.py
lesson_flask_docker/app/static/css/: styles.css
lesson_flask_docker/app/static/js/: index.js
lesson_flask_docker/app/templates/: base.html
lesson_flask_docker/app/templates/auth/: login.html
lesson_flask_docker/app/templates/pages/: add.html  list.html
lesson_flask_docker/app/templates/partials/: flash_messages.html  navbar.html
lesson_flask_docker/app/views/auth/: auth.py
lesson_flask_docker/app/views/pages/: pages.py
lesson_oop/: main.py
orm/: 01_table.py  02_classic_model.py  03_declarative_model.py  (+2 more)
(+39 files in other folders)
